[tool.poetry]
name = "pyplugintest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
typer = {extras = ["all"], version = "^0.6.1"}
inflect = "^6.0.0"
mysqlclient = "^2.1.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
