[tool.poetry]
name = "pydevlake"
version = "0.1.0"
description = "Devlake plugin framwork"
authors = ["Camille Teruel <camille.teruel@meri.co>", "Keon Amini <keon.amini@merico.dev>"]
license = "ASF"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
mysqlclient = "^2.1.1"
requests = "^2.28.1"
inflect = "^6.0.2"
typer = "^0.7.0"
jsonpickle = "^2.2.0"
marshmallow = "^3.19.0"
apispec = "^6.0.2"
fire = "^0.4.0"
pyyaml = "^6.0"
pydevd-pycharm = "^223.7571.64"
pydevd = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
